--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "@astrojs/image": "^0.16.5",
     "@astrojs/mdx": "^0.11.1",
+    "@astrojs/prefetch": "^0.2.1",
     "@astrojs/rss": "^1.0.1",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^3.0.0",
-    "astro": "^2.2.1",
+    "astro": "^2.3.4",
     "daisyui": "^2.27.0",
     "dayjs": "^1.11.7",
     "sharp": "^0.31.3"
