--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@astrojs/image": "^0.16.5",
     "@astrojs/mdx": "^0.11.1",
+    "@astrojs/partytown": "^1.2.1",
     "@astrojs/prefetch": "^0.2.1",
     "@astrojs/rss": "^1.0.1",
     "@astrojs/sitemap": "^1.0.0",
