--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "@astrojs/partytown": "^1.2.1",
     "@astrojs/prefetch": "^0.2.1",
     "@astrojs/rss": "^1.0.1",
-    "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^3.0.0",
-    "astro": "^2.3.4",
+    "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.4.15",
     "daisyui": "^2.27.0",
     "dayjs": "^1.11.7",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
