--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.16.5",
-    "@astrojs/mdx": "^0.11.1",
-    "@astrojs/partytown": "^1.2.1",
-    "@astrojs/prefetch": "^0.2.1",
-    "@astrojs/rss": "^1.0.1",
+    "@astrojs/image": "0.18.0",
+    "@astrojs/mdx": "2.1.1",
+    "@astrojs/partytown": "2.0.4",
+    "@astrojs/prefetch": "0.4.1",
+    "@astrojs/rss": "4.0.5",
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.4.15",
