--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@astrojs/rss": "4.0.5",
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@lordicon/element": "^1.6.0",
     "astro": "^4.4.15",
     "daisyui": "^2.27.0",
     "dayjs": "^1.11.7",
+    "lottie-web": "^5.12.2",
     "sharp": "^0.31.3",
     "tailwindcss": "^3.4.1"
   },
