--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Astro Modern Personal Website",
+  "name": "yossthedev-web",
   "description": "Astro Modern personal website template with Project Section, CV Section, Paginated Blog, Shop, RSS Feed, SEO Friendly, Visual themes and Responsive Desing.",
   "type": "module",
   "version": "2.3.0",
