--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "2.2.2",
     "@astrojs/partytown": "2.0.4",
     "@astrojs/prefetch": "0.4.1",
     "@astrojs/rss": "4.0.5",
